--- a/blooog/_posts/你好啊.md
+++ b/blooog/_posts/你好啊.md
@@ -1,5 +1,67 @@
-### 你好
 
-## 这是个什么贵物
+## 第一章 沈阳大街
 
-### 我不到啊
+“杀马特团长，你看你领的那几个贵物，还有你，人不人，鬼不鬼的。就你这样还要抓我，在沈阳大街别让我看到你，看见你必定把你头套拽掉了必须盘你脸”
+
+“我告诉你啊杀马特，到沈阳了`指定没有你好果子吃`啊你记住了。”
+
+"杀马特，杀马特，杀马特，我告诉你，杀马特，你要是敢抓我，我就让你死，我告诉你啊......"
+
+### 第二章 续写
+
+沈阳城里的人们正在对着某些人破口大骂，但是他们却不知道，在他们的前方，已经聚集了数十人。而此刻被众多人围着的人正是这群人的领头之人，只见此时的他，一脸怒气，双目充血的瞪着面前的这群人："你......你们......我们走"
+
++ 杀马特团长的话音刚落，便有人上前一步拦住了杀马特团长："杀马特，我警告你，不准离开，我们不管你背后有什么势力支撑，我们只管我们自己的利益，你要是不遵守规矩，那我们只好采取措施。"
+
++ 听着眼前之人的威胁，杀马特团长冷笑一声，看向对面的人道："哼，你们也太瞧不起我了吧？我杀马特的威信岂是你们能够质疑的？你们不怕我让你们死，还敢阻挡我吗？"
+
+### 一个函数
+
+```typescript
+
+// 这是一个防抖函数
+
+function debounce(func, delay = 300, immediate = true) {
+  let timer = 0;
+  return function () {
+    immediate && !timer && func.apply(this, arguments);
+    clearTimeout(timer);
+    timer = setTimeout(() => {
+      func.apply(this, arguments);
+    }, delay);
+  };
+}
+
+
+```
+
+"杀马特，我劝你识相点，如果你再敢乱说一句的话，我现在就把你送回去"其中一人说道。
+
+>> "呵呵，好，既然如此，那我倒要看看，你们究竟有何手段。你们可真不要怪我，我是不会放过你们的。"杀马特团长恶狠狠的说道。
+
+>> 看着杀马特团长依旧一副死猪不怕开水烫的表情，其中的人脸色一变，随即对旁边的人使了个眼色，那名男子便立刻从怀中掏出一块令牌递到杀马特团长的面前。
+
+"拿着你的令牌，赶紧离开，我不希望等下动手伤及你性命。"男子对杀马特团长说道。
+
+接过令牌的杀马特团长，仔细的观察着这块令牌，看到令牌之上写的字迹后，杀马特团长眼神一亮，脸上露出惊讶的神色，随即说道："原来是龙虎山弟子，看你这身打扮，应该是你们龙虎山的核心弟子吧，你叫什么名字？"
+
+"我叫刘文杰，这块令牌可以帮你在龙虎山畅通无阻，我们这里可没有那种人能够随意进出龙虎山。"男子淡漠的说道。
+
+1. "哈哈哈哈哈，刘师兄说的太对了，
+2. 龙虎山乃是整个华夏修炼界最强大的门派，
+3. 岂是你们这些外来人可以随意闯入的？
+4. "一名男子站了出来，一脸嘲讽的笑道。
+
+"是吗？可惜，你错了，我龙虎山可没有你们说的那样高尚，我告诉你，就凭你，在龙虎山根本连做炮灰的资格都没有"刘文杰说着，便将手中的令牌抛掷到地面之上。
+
+```C
+
+#include 【studio。h】
+int mian（）
+{
+  string Hellowold = ""helloworld
+  printf("%s", Hellowold);
+  return o;
+}
+
+```
